Se modificó la vista de las sedes, ajusatando el panel al tamaño de las mismas; se Intentará implementar un calendario para mostrar de forma más amigable al usuario los partidos por día

--- a/WebContent/principal/paginas/sedes.xhtml
+++ b/WebContent/principal/paginas/sedes.xhtml
@@ -14,12 +14,12 @@
 		<ui:include src="static/menu.xhtml" />
 	</ui:insert>
 	<div class="container">
-		<p:carousel id="basicCarousel" itemStyle="width:auto; height: auto;" numVisible="1">  
+		<p:carousel id="basicCarousel" itemStyle="width:660px; height: 400px;" numVisible="1">  
 		    <f:facet name="header">  
 		            Estadios - Sedes
 		    </f:facet>
 		    <h:panelGrid columns="1" style="width:100%" cellpadding="5">
-		        <p:graphicImage value="/resources/images/sedes/arenaPernambuco.jpg"/>   
+		        <p:graphicImage value="/resources/images/sedes/arenaPernambuco.jpg" />   
 		        <h:outputText value="Arena Pernambuco" /> 
 		    </h:panelGrid>
 		    <h:panelGrid columns="1" style="width:100%" cellpadding="5">  
