--- a/WebContent/principal/sedes.xhtml
+++ b/WebContent/principal/sedes.xhtml
@@ -4,9 +4,10 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"> 
-
+      
 <h:head>
 	<h:outputStylesheet name="styles.css"></h:outputStylesheet>
+	<h:outputScript name="scripts/scripts.js"></h:outputScript>
 </h:head> 
 <body> 
 	<ui:insert name="header">
